# xai-mcp

./: .gitignore  AGENTS.md  README.md  app.yaml  databricks.yml  pyproject.toml
.claude/: settings.local.json
.github/: copilot-instructions.md
data/: lubricant_quality_test_X.csv  lubricant_quality_test_y.csv  lubricant_quality_train_X.csv
docs/: product-brief.md  scalability-path.md  technical-debt-registry.md  xai-methodology.md
docs/decisions/: 001-separation-of-concerns.md  002-deterministic-narratives.md  003-transport-stdio-to-http.md  004-pydantic-schemas.md  005-tool-output-structure.md  006-model-registry-pattern.md  007-single-agent-architecture.md  008-pipeline-bridge.md  009-rag-glass-floor.md  010-kedro-integration-map.md  011-drift-stateless.md
knowledge/: clinical_protocol.md  lubricant_maintenance_protocol.md
models/: lgbm_lubricant_quality.joblib  lgbm_lubricant_quality_meta.json  rf_breast_cancer.joblib  rf_breast_cancer_meta.json  xgboost_breast_cancer.joblib  xgboost_breast_cancer_meta.json
scenarios/: README.md
scenarios/auditability/: reproducibility.yaml  snapshot_tests.yaml
scenarios/cli/: cli_adapter.yaml
scenarios/day1/: context_artifacts_exist.yaml  explain_single_prediction.yaml
scenarios/day2/: multi_turn_conversation.yaml  partial_dependence.yaml  summarize_model.yaml
scenarios/day3/: audit_metadata.yaml  error_model_not_found.yaml  error_sample_out_of_range.yaml
scenarios/day4/: model_comparison.yaml
scenarios/day5/: demo_golden_path.yaml  documentation_complete.yaml  zero_setup.yaml
scenarios/error-handling/: error_invalid_feature.yaml
scenarios/instructions/: get_glass_floor.yaml  get_methodology.yaml  get_methodology_missing.yaml  mcp_prompts_listed.yaml  server_factory_init.yaml  server_import_no_side_effects.yaml  server_missing_models.yaml  transport_http.yaml  transport_stdio_default.yaml
scenarios/multi-model/: second_model_works.yaml
scenarios/onboarding/: documentation_complete.yaml  handoff_test.yaml  scalability_document.yaml
scenarios/rag/: glass_floor_output.yaml  graceful_degradation.yaml  knowledge_base_loads.yaml  retrieve_business_context.yaml
scenarios/tools/: compare_features.yaml  compare_predictions.yaml  describe_dataset.yaml
scripts/: databricks_demo_notebook.py  demo_notebook_workflows.py  train_lubricant_model.py  train_rf_model.py  train_toy_model.py
skills/xai-workflow/: SKILL.md
specs/: tools.spec.md
src/xai_toolkit/: __init__.py  _testing.py  cli.py  drift.py  explainers.py  instructions.py  knowledge.py  narrators.py  notebook_wrappers.py  pipeline_compat.py  plots.py  registry.py  result_store.py  sampling.py  schemas.py  server.py  skill_registry.py  store_briefing.py  store_queries.py
src/xai_toolkit/kedro_adapter/: __init__.py  nodes.py  pipeline.py
tests/: conftest.py  test_background_data.py  test_batch_shap.py  test_cli.py  test_compare_predictions.py  test_drift.py  test_drift_integration.py  test_drift_narrators.py  test_explainers.py  test_instructions.py  test_intrinsic.py  test_kedro_nodes.py  test_kedro_pipeline.py  test_knowledge.py  test_narrators.py  test_notebook_wrappers.py  test_pipeline_bridge.py  test_pipeline_compat.py  test_plots.py  test_register_in_memory.py  test_reproducibility.py  test_result_store.py  test_retrieval_first.py  test_sampling.py  test_second_model.py  test_server_errors.py  test_snapshots.py
tests/__snapshots__/: test_drift_narrators.ambr  test_snapshots.ambr
