[project]
name = "xai-toolkit"
version = "0.1.0"
description = "ML model explainability as plain-English narratives, exposed via MCP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "xgboost",
    "scikit-learn",
    "shap",
    "matplotlib",
    "pandas",
    "numpy",
    "pydantic>=2.0",
    "mcp[cli]",
    "joblib",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/xai_toolkit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
