[project]
name = "xai-toolkit"
version = "0.1.0"
description = "ML model explainability as plain-English narratives, exposed via MCP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "xgboost",
    "scikit-learn",
    "shap",
    "matplotlib",
    "pandas",
    "numpy",
    "pydantic>=2.0",
    "lightgbm",
    "joblib",
    "fastapi>=0.115.12",
    "mcp[cli]>=1.14.0",
    "uvicorn>=0.34.2",
    "databricks-sdk>=0.60.0",
    "fastmcp>=2.12.5",
    "pyarrow>=23.0.1",
]

[project.optional-dependencies]
kedro = [
    "kedro>=0.19",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/xai_toolkit"]

[project.scripts]
xai-toolkit = "xai_toolkit.server:main"

# ---------------------------------------------------------------------------
# Dev dependencies — unified in dependency-groups (uv sync --group dev)
# ---------------------------------------------------------------------------

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "syrupy>=5.1.0",
    "ruff>=0.15.2",
    "mypy>=1.17.0",
]

# ---------------------------------------------------------------------------
# Tool configuration
# ---------------------------------------------------------------------------

[tool.uv]
constraint-dependencies = ["docutils<0.21"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"
markers = [
    "slow: expensive integration-style tests excluded from default local runs",
]

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
]

[tool.ruff.lint.isort]
known-first-party = ["xai_toolkit"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
disallow_untyped_defs = false  # start permissive, tighten over time
